# rustroperiods

./: .gitignore  Cargo.toml  pyo3_tests.ipynb  pyproject.toml
benches/: periodogram.rs  sorting.rs
src/: lib.rs  lightcurve.rs  periodograms.rs  sorting.rs  stats.rs
