[package]
name = "rustroperiods"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rustroperiods"
crate-type = ["cdylib", "lib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module"] }
numpy = "0.19"
rand = "0.8.5"
rand_distr = "0.4.3"

[profile.release]
opt-level = 3
lto = true
incremental = true

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "periodogram"
harness = false
