[build-system]
requires = ["maturin>=1.3,<2"]
build-backend = "maturin"

[project]
name = "rustroperiods"
description = "Fast periodograms for astronomical time series"
#readme = "README.md"
authors = [
  { name = "Pablo Huijse", email = "pablo.huijse@gmail.com" },
  ]
#license = { file = "LICENSE" }
requires-python = ">=3.8"
#dependencies = ["numpy"]
classifiers = [
  "Programming Language :: Rust", 
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: Implementation :: CPython",
  "Topic :: Scientific/Engineering",
  ]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
